--- a/replica.yml
+++ b/replica.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - name: container-a
-    image: your-image-name
+    image: image-name
     resources:
       requests:
         memory: "400Mi"
@@ -29,7 +29,7 @@ metadata:
 spec:
   containers:
   - name: container-c
-    image: your-image-name
+    image: image-name
     resources:
       requests:
         memory: "400Mi"
